fix: Aligne center silver and bronze sponsors
Former-commit-id: c6bd446067035207cde3dc64d378ad96bf9f8752
Former-commit-id: da856a6d2631dc1d24e705e5f8b6c251868b3feb
Former-commit-id: 9b2eac15e9698d1f6dbf860c64021c7c25a51a0b

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1405,7 +1405,7 @@ nav#overlay {
         content: "";
         display: table; }
       #partners div.sponsors ul li {
-        float: left;
+        display: inline-block;
         height: 200px;
         line-height: 200px; }
         #partners div.sponsors ul li .logo {
@@ -1452,6 +1452,7 @@ nav#overlay {
             padding: 0;
             text-align: center; } }
     #partners div.sponsors.gold .sponsor {
+      float: left;
       width: 33%;
       height: auto;
       line-height: normal;
