--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -222,6 +222,30 @@ font-family: $header-font-family;
 	}
 }
 
+#jobs-bar {
+  position: fixed;
+  z-index: 10000000;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 28px;
+  a {
+    display: block;
+    height: 28px;
+    line-height: 30px;
+    background: $green;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 600;
+    @include transition(0.5s all);
+    &:hover {
+  		background: darken($green,5%);    
+      @include transition(0.5s all);
+    }
+  }
+}
 
 #header {
 
