improv: added logo
Add Intellection logo to PolyConf website

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1676,6 +1676,14 @@ nav#overlay {
                   }
 
                 }
+
+                &.intellection {
+
+                  img {
+                    width: 50%;
+                  }
+
+                }
 			}
 			
 		}
