--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1491,6 +1491,8 @@ nav#overlay {
       #partners div.sponsors.bronze .sponsor.gamesys img {
         width: initial;
         margin: 0 auto; }
+      #partners div.sponsors.bronze .sponsor.intellection img {
+        width: 50%;  }
   #partners div.supporters {
     padding: 50px 0;
     text-align: center; }
