--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1518,7 +1518,7 @@ nav#overlay {
         width: initial;
         margin: 0 auto; }
       #partners div.sponsors.bronze .sponsor.intellection img {
-        width: 50%;  }
+        width: 50%; }
   #partners div.supporters {
     padding: 50px 0;
     text-align: center; }
@@ -2097,3 +2097,46 @@ nav#overlay {
       font-size: 1.125em;
       margin: 1em 0 0.5em;
       font-weight: 500; }
+
+#promo {
+  height: 600px; }
+  #promo::after {
+    clear: both;
+    content: "";
+    display: table; }
+  #promo section {
+    width: 100%;
+    height: 600px;
+    float: left; }
+    #promo section#run {
+      background: url(../img/run.jpg) no-repeat center center;
+      background-size: cover;
+      position: relative; }
+      #promo section#run a {
+        position: absolute;
+        color: #fff;
+        font-size: 1.875em;
+        font-weight: 600;
+        text-align: center;
+        border-radius: 5px;
+        left: 50%;
+        top: 50%;
+        text-transform: uppercase;
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        overflow: hidden; }
+        #promo section#run a::after {
+          clear: both;
+          content: "";
+          display: table; }
+        #promo section#run a span {
+          display: inline-block;
+          padding: 10px 20px;
+          background: rgba(46, 78, 107, 0.95);
+          float: left;
+          line-height: 40px; }
+          #promo section#run a span.date {
+            background: rgba(32, 185, 241, 0.95); }
