--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -420,8 +420,9 @@ body {
       transition: 0.5s all; }
 
 #header {
-  height: 100%;
-  background: #2e4e6b; }
+  height: 90%;
+  background: #2e4e6b;
+  position: relative; }
   @media screen and (min-width: 64em) and (max-width: 75em) {
     #header {
       background-position: center -120px !important; } }
@@ -1599,19 +1600,25 @@ nav#overlay {
       float: left;
       display: block;
       margin-right: 5%;
-      width: 47.5%;
-      @incldue omega(2n); }
+      width: 47.5%; }
       #terms .row .column:last-child {
-        margin-right: 0; } }
+        margin-right: 0; }
+      #terms .row .column:nth-child(2n) {
+        margin-right: 0; }
+      #terms .row .column:nth-child(2n+1) {
+        clear: left; } }
   @media screen and (min-width: 64em) and (max-width: 75em) {
     #terms .row .column {
       float: left;
       display: block;
       margin-right: 5%;
-      width: 47.5%;
-      @incldue omega(2n); }
+      width: 47.5%; }
       #terms .row .column:last-child {
-        margin-right: 0; } }
+        margin-right: 0; }
+      #terms .row .column:nth-child(2n) {
+        margin-right: 0; }
+      #terms .row .column:nth-child(2n+1) {
+        clear: left; } }
   @media screen and (min-width: 40em) and (max-width: 63.9375em) {
     #terms .row .column {
       width: 100%; } }
