--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -249,8 +249,9 @@ font-family: $header-font-family;
 
 #header {
 
-  height: 100%;
+  height: 90%;
 	background: $dark;
+  position: relative;
 
 	@include media($tablet) {
 		background-position: center -120px !important;
@@ -1838,12 +1839,12 @@ nav#overlay {
           
 			@include media($desktop) {
         @include span-columns(6);
-        @incldue omega(2n);
+        @include omega(2n);
 			}
 
 			@include media($tablet) {
         @include span-columns(6);
-        @incldue omega(2n);
+        @include omega(2n);
 			}
 
 			@include media($portrait) {
