--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2382,6 +2382,11 @@ nav#overlay {
           background: $lightgray;
           position: relative;
           
+          @include media($mobile) {
+          	padding: 20px;  
+          }
+          
+          
           p {
             
             margin: 0;
@@ -2413,6 +2418,8 @@ nav#overlay {
             line-height: 1em;
             text-transform: uppercase;
             border-radius: 2px;
+            position: relative;
+            z-index: 100000;
           }
           
         }          
