Another mobile fix.
Former-commit-id: 60eb49812f7866f6c9422407bc20bf8d9b8eeef3
Former-commit-id: 2b15288558f5102b5fd89c674372ee5008f468ef
Former-commit-id: af79a04d2aa99d72691cff228963bf17478777a5

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2010,7 +2010,8 @@ nav#overlay {
           text-transform: uppercase;
           border-radius: 2px;
           position: relative;
-          z-index: 100000; }
+          z-index: 100000;
+          cursor: pointer; }
       #agenda .day .event-list .event.lightning .short .name:before {
         font-weight: 600;
         padding: 0 10px;
