--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2420,6 +2420,7 @@ nav#overlay {
             border-radius: 2px;
             position: relative;
             z-index: 100000;
+            cursor: pointer;
           }
           
         }          
